@@ -1,0 +1,7 @@
+package HTML::StateTable::Cell::Trait::Tag;
+
+use Moo::Role;
+
+use namespace::autoclean;
+
+1;
