@@ -6,7 +6,7 @@ use Sub::Exporter -setup => { exports => [ qw(
  CELL_TRAIT_PREFIX COL_INFO_TYPE_ATTR COLUMN_ALIAS COLUMN_META
  COLUMN_META_CONFIG COLUMN_TRAIT_PREFIX COMMA DOT DQUOTE ENCODE_ENTITIES EOL
  EXCEPTION_CLASS EXTENSION_TYPE FALSE INDENT_CHARS ITERATOR_DOWNLOAD_KEY
- MAX_FILTER_ROWS NUL QUERY_KEY RENDERER_CLASS RENDERER_PREFIX
+ MAX_FILTER_ROWS NUL PIPE QUERY_KEY RENDERER_CLASS RENDERER_PREFIX
  SERIALISE_COLUMN_ATTR SERIALISE_TABLE_KEY SERIALISE_TABLE_VIEW SPC TABLE_META
  TABLE_META_CONFIG TRIGGER_CLASS TRUE TYPE_EXTENSION
 )]};
@@ -85,6 +85,8 @@ sub ITERATOR_DOWNLOAD_KEY () { '_iterator_download' }
 sub MAX_FILTER_ROWS () { 500 }
 
 sub NUL () { q() }
+
+sub PIPE () { q(|) }
 
 sub QUERY_KEY () { 'table_name' }
 
